# uptime

./: README.md  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 9fd0436df475_initial_schema.py  f073edb9d4ab_users_monitor_owner.py
apps/api/app/: auth.py  config.py  db.py  deps.py  main.py  models.py  schemas.py  utils.py
apps/api/app/routers/: auth.py  demo.py  monitors.py  status.py
apps/api/app/services/: scheduler.py
apps/web/: middleware.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/api/auth/login/: route.ts
apps/web/src/app/api/auth/logout/: route.ts
apps/web/src/app/api/auth/register/: route.ts
apps/web/src/app/api/monitors/: route.ts
apps/web/src/app/api/monitors/[id]/: route.ts
apps/web/src/app/demo/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/monitors/[id]/: page.tsx
apps/web/src/app/monitors/new/: page.tsx
apps/web/src/app/register/: page.tsx
apps/web/src/app/status/[slug]/: page.tsx
apps/web/src/components/: Badge.tsx  DeleteMonitorButton.tsx  Header.tsx  MonitorCard.tsx  StatusDot.tsx
apps/web/src/lib/: api.ts  session.ts
