[tool.poetry]
name = "uptime-api"
version = "0.1.0"
description = ""
authors = ["CSpiegelhalter <spiegelhaltercurt@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
fastapi = "^0.116.1"
uvicorn = { version = "^0.35.0", extras = ["standard"] }
pydantic = "^2.11.7"
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.43"
psycopg = { version = "^3.2.9", extras = ["binary"] }
alembic = "^1.16.4"
httpx = "^0.28.1"
apscheduler = "^3.11.0"
python-dotenv = "^1.1.1"
orjson = "^3.11.2"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
PyJWT = "^2.10.1"
email-validator = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
